pbc_contract_codegen/tests/action/fail/zk/missing_zk_derive_arg_action.stderr
error[E0277]: the trait bound `ZkState<u64>: CreateTypeSpec` is not satisfied
  --> tests/action/fail/zk/missing_zk_derive_arg_action.rs:18:16
   |
18 |     _zk_state: pbc_contract_common::zk::ZkState<u64>,
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `CreateTypeSpec` is not implemented for `ZkState<u64>`
   |
   = help: the following other types implement trait `CreateTypeSpec`:
             bool
             i8
             i16
             i32
             i64
             i128
             u8
             u16
           and $N others
note: required by a bound in `FnAbi::argument`
  --> $WORKSPACE/pbc_contract_core/src/abi/func.rs
   |
   |     pub fn argument<T: CreateTypeSpec>(&mut self, name: String, lut: &BTreeMap<String, u8>) {
   |                        ^^^^^^^^^^^^^^ required by this bound in `FnAbi::argument`
